fix: removed border on table on mobile

--- a/src/app/pages/purchase/purchase.component.css
+++ b/src/app/pages/purchase/purchase.component.css
@@ -136,6 +136,8 @@ input::-webkit-inner-spin-button {
         display: flex;
         align-items: center;
         justify-content: end;
+        border: none;
+        margin-bottom: 3px;
     }
 
     .purchase-quantity {
